# simple-mcpaintball-tool

./: .gitignore  Cargo.toml  README.md
src/: main.rs
